# thunder-speech

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .releaserc.json  404.html  CHANGELOG.md  LICENSE.txt  README.md  Ultimate guide.html  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  quick reference guide.html  setup.cfg  setup.py  sitemap.xml
.github/: dependabot.yml
.github/workflows/: create-release.yml  publish-ghpages.yml  python-build.yml  test-and-release.yml
Custom Data/: index.html
Ultimate guide/: index.html
api/: librosa compatibility.html  metrics.html  utils.html
api/CTC Loss/: index.html
api/Citrinet/: blocks.html  compatibility.html  module.html
api/Citrinet/blocks/: index.html
api/Citrinet/compatibility/: index.html
api/Citrinet/module/: index.html
api/Data/: dataloader utils.html  datamodule.html  dataset.html
api/Data/dataloader utils/: index.html
api/Data/datamodule/: index.html
api/Data/dataset/: index.html
api/Huggingface/compatibility/: index.html
api/Huggingface/transform/: index.html
api/Quartznet/: blocks.html  compatibility.html  module.html  transform.html
api/Quartznet/blocks/: index.html
api/Quartznet/compatibility/: index.html
api/Quartznet/model/: index.html
api/Quartznet/module/: index.html
api/Quartznet/preprocess/: index.html
api/Quartznet/transform/: index.html
api/Text Processing/: preprocess.html  tokenize.html  transform.html  vocab.html
api/Text Processing/preprocess/: index.html
api/Text Processing/tokenize/: index.html
api/Text Processing/transform/: index.html
api/Text Processing/vocab/: index.html
api/Wav2Vec/: module.html  transform.html
api/Wav2Vec/module/: index.html
api/Wav2Vec/transform/: index.html
api/blocks/: index.html
api/callbacks/: index.html
api/finetune/: index.html
api/jasper/blocks/: index.html
api/jasper/model/: index.html
api/librosa compatibility/: index.html
api/metrics/: index.html
api/module/: index.html
api/registry/: index.html
api/utils/: index.html
docs/: Custom Data.md  Ultimate guide.md  quick reference guide.md
docs/api/: CTC Loss.md  blocks.md  callbacks.md  finetune.md  librosa compatibility.md  metrics.md  module.md  registry.md  utils.md
docs/api/Citrinet/: blocks.md  compatibility.md  module.md
docs/api/Data/: dataloader utils.md  datamodule.md  dataset.md
docs/api/Huggingface/: compatibility.md  transform.md
docs/api/Quartznet/: blocks.md  compatibility.md  model.md  module.md  preprocess.md  transform.md
docs/api/Text Processing/: preprocess.md  tokenize.md  transform.md  vocab.md
docs/api/Wav2Vec/: module.md  transform.md
docs/api/jasper/: blocks.md  model.md
docs/css/: mkdocstrings.css
quick reference guide/: index.html
search/: search_index.json
src/thunder/: __init__.py  blocks.py  callbacks.py  ctc_decoder.py  ctc_loss.py  finetune.py  librosa_compat.py  metrics.py  module.py  registry.py  utils.py
src/thunder/citrinet/: blocks.py  compatibility.py  module.py
src/thunder/data/: dataloader_utils.py  datamodule.py  dataset.py
src/thunder/huggingface/: compatibility.py  transform.py
src/thunder/jasper/: blocks.py  model.py
src/thunder/quartznet/: blocks.py  compatibility.py  finetune.py  model.py  module.py  preprocess.py  spec_augment.py  transform.py
src/thunder/text_processing/: preprocess.py  (+3 more)
tests/: conftest.py  test_blocks.py  test_callbacks.py  test_ctc_decoder.py  test_data.py  test_finetune.py  test_import.py  test_jasper_blocks.py  test_jasper_model.py  test_librosa_compat.py  test_metrics.py  test_quartznet_blocks.py  test_quartznet_compatibility.py  test_quartznet_model.py  test_quartznet_module.py  test_quartznet_preprocess.py  test_text_preprocess.py  test_text_tokenize.py  test_text_transforms.py  test_text_vocab.py  test_utils.py  utils.py
tests/citrinet/: test_blocks_cn.py  test_compatibility_cn.py  test_module_cn.py
tests/conformer/: test_attention_conf.py
tests/huggingface/: test_module_huggingface.py  test_preprocess_huggingface.py  test_tokenizer_huggingface.py
tests/nemo_config_samples/: Jasper10x5Dr-En.yaml  QuartzNet15x5Base-En.yaml  QuartzNet15x5NR-En.yaml  QuartzNet5x5LS-En.yaml  example_tokenizer.model
tests/quartznet/: test_blocks_qn.py  test_compatibility.py  test_compatibility_qn.py  test_module.py  test_module_qn.py  test_transform.py  test_transform_qn.py
tests/text/: test_tokenize.py  test_transforms.py  test_vocab.py
tests/wav2vec/: test_module.py  test_module_w2v.py  test_preprocess_w2v.py
third-party-licenses/: torchaudio-License
train/: train_en.py  train_pt.py
train/callbacks/: finetune.py  logging.py
(+3 files in other folders)
