[project]
name = "thunder-speech"
version = "3.2.0"
description = "A Hackable speech recognition library"
authors = [{ name = "scart97", email = "scart.lucas@gmail.com" }]
license = { file = "LICENSE.txt" }
readme = "README.md"
keywords = ["python", "pytorch", "speech recognition"]

requires-python = ">=3.9"
dependencies = [
    "importlib-metadata>=4.12.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "transformers>=4.35.0",
    "hydra-core>=1.1.2",
    "num2words>=0.5.10",
    "torchmetrics>=1.2.0",
    "editdistance>=0.6.0",
    "wget>=3.2",
    "sentencepiece>=0.1.96",
    "protobuf==3.18.1",
    "soundfile>=0.12.1",
]

[project.urls]
homepage = "https://scart97.github.io/thunder-speech/"
repository = "https://github.com/scart97/thunder-speech"
documentation = "https://scart97.github.io/thunder-speech/"

[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "hypothesis>=6.49.1",
    "ruff>=0.1.5",
]
docs = [
    "mkdocs>=1.3.0",
    "mkdocs-material>=8.3.9",
    "mkdocstrings[python-legacy]>=0.19.0",
]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install build && build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov src --cov-report term-missing --verbose"
testpaths = ["tests"]
norecursedirs = ["dist", "build"]
